<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="Services" />

    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="Pharmacy" />

    <item
        android:id="@+id/med_records"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="Medical Records" />


    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/nav_send"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_send" />


</menu>
