<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.transfinitte_decoders.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.transfinitte_decoders.ui.gallery.GalleryFragment"
        android:label="User_ID"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.transfinitte_decoders.ui.slideshow.SlideshowFragment"
        android:label="Feature 1"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.transfinitte_decoders.ui.dispenser.DispenserFragment"
        android:label="Pharmacy"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/med_records"
        android:label="med"
        android:name="com.example.transfinitte_decoders.ui.medicalrecords.MedicalRecords"
        tools:layout="@layout/medical_records_fragment"/>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.transfinitte_decoders.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.transfinitte_decoders.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

</navigation>